// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/mentions/demo/async.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/mentions/demo/autoSize.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/mentions/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    >
      @afc163
    </textarea>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/mentions/demo/form.md correctly 1`] = `
LoadedCheerio {
  "0": <form
    class="dcloud-form dcloud-form-horizontal"
  >
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-6 dcloud-form-item-label"
        >
          <label
            class=""
            for="coders"
            title="Top coders"
          >
            Top coders
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-16 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-mentions"
              >
                <textarea
                  class="rc-textarea"
                  id="coders"
                  rows="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-6 dcloud-form-item-label"
        >
          <label
            class="dcloud-form-item-required"
            for="bio"
            title="Bio"
          >
            Bio
          </label>
        </div>
        <div
          class="dcloud-col dcloud-col-16 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <div
                class="dcloud-mentions"
              >
                <textarea
                  class="rc-textarea"
                  id="bio"
                  placeholder="You can use @ to ref user here"
                  rows="3"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-form-item"
    >
      <div
        class="dcloud-row dcloud-form-item-row"
      >
        <div
          class="dcloud-col dcloud-col-14 dcloud-col-offset-6 dcloud-form-item-control"
        >
          <div
            class="dcloud-form-item-control-input"
          >
            <div
              class="dcloud-form-item-control-input-content"
            >
              <button
                class="dcloud-btn dcloud-btn-primary"
                type="submit"
              >
                <span>
                  Submit
                </span>
              </button>
                 
              <button
                class="dcloud-btn"
                type="button"
              >
                <span>
                  Reset
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/mentions/demo/placement.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/mentions/demo/prefix.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      placeholder="input @ to mention people, # to mention tag"
      rows="1"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/mentions/demo/readonly.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    style="margin-bottom:10px"
  >
    <div
      class="dcloud-mentions dcloud-mentions-disabled"
      style="width:100%"
    >
      <textarea
        class="rc-textarea rc-textarea-disabled"
        disabled=""
        placeholder="this is disabled Mentions"
        rows="1"
      />
    </div>
  </div>,
  "1": <div
    class="dcloud-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      placeholder="this is readOnly Mentions"
      readonly=""
      rows="1"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
